# SRCNN-SRGAN

./: .gitignore  README.md  details.md  main.py  plot_metrics.py  pyproject.toml  test_metrics.py
app/: main.py
artifacts/model_training/: srcnn.pth
components/: data_ingestion.py  data_transformation.py  model_training.py  model_training_srgan.py
config/: config.yaml  configuration.py
custom_logger/: __init__.py
entity/: __init__.py
loss/: edge_loss.py  vgg_loss.py
models/: srcnn.py  srgan.py
notebooks/: remote_srcnn_training_new.ipynb  remote_srcnn_training_streaming.ipynb  remote_srgan_training_new.ipynb  remote_srgan_training_streaming.ipynb  remote_training.ipynb
pipelines/: data_ingestion_pipeline.py  data_transformation_pipeline.py  inference_pipeline.py  model_training_pipeline.py  model_training_pipeline_srgan.py
utils/: common.py  data_loader.py  metrics.py
